<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01579B">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:textSize="32sp"
            android:textColor="#F9A825"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/question_two"
            android:textAllCaps="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#F9A825"

            />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/page_two"
            android:scaleType="fitXY"
            android:background="@android:drawable/bottom_bar"
            android:contentDescription="@string/image_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="18sp"
            android:textColor="#F9A825"
            android:layout_marginTop="16dp"
            android:text="@string/description_page_two" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="#F9A825" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/page2_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#F9A825"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/question1_page_two" />

            <RadioButton
                android:id="@+id/page2_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#F9A825"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/question2_page_two" />

            <RadioButton
                android:id="@+id/page2_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#F9A825"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/question3_page_two" />


        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:onClick="clickBackPageTwo"
                android:textSize="18sp"
                android:text="@string/back_page_one" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:textSize="18sp"
                android:onClick="clickNextPageTwo"
                android:text="@string/next_page_one" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>