<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01579B">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/question_five"
            android:textAllCaps="true"
            android:textColor="#F9A825"
            android:textSize="32sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#F9A825"

            />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@android:drawable/bottom_bar"
            android:contentDescription="@string/image_main"
            android:scaleType="fitXY"
            android:src="@drawable/page_five" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/description_page_five"
            android:textColor="#F9A825"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="#F9A825" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/page5_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/question1_page_five"
                android:textColor="#F9A825"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/page5_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/question2_page_five"
                android:textColor="#F9A825"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/page5_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/question3_page_five"
                android:textColor="#F9A825"
                android:textSize="16sp" />


        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:onClick="clickNextPageFive"
                android:text="@string/next_page_one"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>